@@ -47,6 +47,16 @@ jacocoTestReport {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    google()  // Ensure Google's Maven repository is included
+}
+
+// Load the .env file
+def dotenv = new Properties()
+file('.env').withInputStream { dotenv.load(it) }
+
+ext {
+    googleClientId = dotenv.getProperty('GOOGLE_CLIENT_ID')
+    googleClientSecret = dotenv.getProperty('GOOGLE_CLIENT_SECRET')
 }
 
 dependencies {
@@ -63,6 +73,30 @@ dependencies {
     implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+
+    // Google API Client (Exclude android-json)
+    implementation ('com.google.api-client:google-api-client:1.34.0') {
+        exclude group: 'com.vaadin.external.google', module: 'android-json'
+    }
+
+    // Google OAuth Client
+    implementation 'com.google.oauth-client:google-oauth-client:1.34.1'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1' // Fix TokenResponse issue
+
+    // Google HTTP Client with GSON
+    implementation 'com.google.http-client:google-http-client-gson:1.42.3'
+
+    // Google HTTP Client with Jackson (Fix for JacksonFactory issue)
+    implementation 'com.google.http-client:google-http-client-jackson2:1.42.3'
+
+    // Google Auth Library (Fix TokenResponse to Credential issue)
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.22.0'
+
+    // Google Calendar API
+    implementation group: 'com.google.apis', name: 'google-api-services-calendar', version: 'v3-rev411-1.25.0'
+
+    // Jackson for JSON Parsing
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 
     // PostgreSQL dependencies
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.3'
@@ -81,6 +115,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.3'
     testImplementation 'org.springframework.security:spring-security-test:6.1.0'
 
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("--enable-preview")
 }
 
 testing {
